hphp/test/slow/inout/bad-mixed-mode-1.php.expectf

Fatal error: Encountered unexpected token '&'. in %s/bad-mixed-mode-1.php on line 3
